WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282567
[iOS] Rendering in Jupyter notebook (MathJAX.js converting LaTeX) is broken due to data detection
https://bugs.webkit.org/show_bug.cgi?id=282567
Summary
[iOS] Rendering in Jupyter notebook (MathJAX.js converting LaTeX) is broken d...
Wenson Hsieh
Reported
2024-11-04 15:29:20 PST
rdar://116407458
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-11-04 16:12:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36159
EWS
Comment 2
2024-11-05 07:49:35 PST
Committed
286153@main
(51965fbac8b7): <
https://commits.webkit.org/286153@main
> Reviewed commits have been landed. Closing PR #36159 and removing active labels.
EWS
Comment 3
2024-11-19 18:46:43 PST
Committed
283286.506@safari-7620-branch
(731eb3e83471): <
https://commits.webkit.org/283286.506@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2317 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug